Webpack has been configuration

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 #-------------------------
+# Node Module
+#-------------------------
+/node_modules
+
+#-------------------------
 # Operating Specific Junk Files
 #-------------------------
 
