--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "nekoproject",
   "version": "1.0.0",
-  "description": "\"Aplikasi e-commerce dengan sistem pencarian gambar menggunakan algoritma YOLO-V4\"",
+  "description": "My webpack project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "start": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -20,5 +22,19 @@
   "bugs": {
     "url": "https://github.com/ukrenzz/TA_Project/issues"
   },
-  "homepage": "https://github.com/ukrenzz/TA_Project#readme"
+  "homepage": "https://github.com/ukrenzz/TA_Project#readme",
+  "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.10",
+    "@webpack-cli/init": "^1.0.3",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "terser-webpack-plugin": "^5.0.3",
+    "webpack": "^5.10.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {}
 }
