--- a/package.json
+++ b/package.json
@@ -25,10 +25,15 @@
   "homepage": "https://github.com/ukrenzz/TA_Project#readme",
   "devDependencies": {
     "@babel/core": "^7.12.10",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-syntax-jsx": "^7.12.1",
     "@babel/preset-env": "^7.12.10",
+    "@babel/preset-react": "^7.12.10",
     "@webpack-cli/init": "^1.0.3",
     "babel-loader": "^8.2.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "html-webpack-plugin": "^4.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "terser-webpack-plugin": "^5.0.3",
