--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,4 @@
 {
     "plugins": ["syntax-dynamic-import"],
-    "presets": [
-        [
-            "@babel/preset-env",
-            {
-                "modules": false
-            }
-        ],
-        ["@babel/preset-react"]
-    ]
+    "presets": ["@babel/preset-react"]
 }
