Finishing CRUD category

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:dTnE8l7D2QgiTuIUYa2fKh70/Rffyd4yTlX+weETA9I=
 APP_DEBUG=true
 APP_URL=http://localhost
-ASSET_URL=http://localhost:3000/assets/
+ASSET_URL=http://localhost:3000/assets
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
