--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
         "postcss": "^8.1.14",
         "postcss-import": "^12.0.1",
         "tailwindcss": "^2.0.1"
+    },
+    "dependencies": {
+        "bootstrap-colorpicker": "^3.3.0"
     }
 }
