[Fixed] App url in .evn

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:dTnE8l7D2QgiTuIUYa2fKh70/Rffyd4yTlX+weETA9I=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 ASSET_URL=http://localhost:8000/assets
 
 LOG_CHANNEL=stack
